--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5863280765051652~1128552837"/>
+
     </application>
 
 </manifest>
